Fix padding and out of screen buttons

--- a/src/Pages/Game/ChooseAnimal.css
+++ b/src/Pages/Game/ChooseAnimal.css
@@ -78,7 +78,7 @@
 }
 
 #ContinueAnimalButton {
-    margin-top: 1.2em;
+    margin-top: 0.8em;
     width: 60%;
     height: 6%;
 
