--- a/src/Pages/Game/ChoosePain.css
+++ b/src/Pages/Game/ChoosePain.css
@@ -85,7 +85,7 @@
 
 
 #ContinueButton {
-    margin-top: 1.2em;
+    margin-top: 0.8em;
     width: 60%;
     height: 6%;
 
