--- a/src/Pages/Game/GamePage.css
+++ b/src/Pages/Game/GamePage.css
@@ -9,7 +9,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 25vh;
+    height: 24vh;
     padding: 20px;
     background-size: contain;
     justify-content: center;
