--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -25,8 +25,7 @@
     margin-top: 0.7em;
 
     font-style: normal;
-    font-weight: 400;
-    font-size: 7vw;
+    font-size: 9vw;
     line-height: 1;
     text-align: center;
 
@@ -51,7 +50,7 @@
     justify-content: center;
     align-items: center;
     height: 10em;
-    margin-top: 3.5em;
+    margin-top: 3em;
 }
 
 #MonkeyBackground, #LionBackground, #PandaBackground, #DogBackground {
@@ -79,7 +78,7 @@
     align-items: center;
     width: 60%;
     height: auto;
-    margin-top: 5vh;
+    margin-top: 3vh;
     margin-left: auto;
     margin-right: auto;
 }
